<resources>
    <string name="app_name">To-Do App</string>
    <string name="add">Add</string>
    <string name="list_is_empty">List is empty</string>
    <string name="to_do_list">To-Do List</string>
    <string name="update">Update</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="content">Content</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="high_priority">High priority</string>
    <string name="low_priority">Low priority</string>
    <string name="delete_all">Delete all</string>
    <string name="delete">Delete</string>
    <string name="the_latest">The latest</string>
    <string name="the_oldest">The oldest</string>
    <string name="change_view">Change view</string>
    <string name="settings">Settings</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="updated">Updated</string>
    <string name="added">Added</string>
    <string name="title_cannot_be_empty">Title cannot be empty</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="click_button_and_complete_the_form">Click button below and complete the form</string>
    <string name="swipe_to_delete">Swipe the task to the right or left to delete</string>
    <string name="sample_note">Sample note</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>

    <string-array name="priorities">
        <item>High Priority"</item>
        <item>"Medium Priority"</item>
        <item>"Low Priority"</item>

    </string-array>
</resources>