<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_sort_latest"
                android:title="@string/the_latest" />
            <item
                android:id="@+id/menu_sort_oldest"
                android:title="@string/the_oldest" />
            <item
                android:id="@+id/menu_sort_high"
                android:title="@string/high_priority" />
            <item
                android:id="@+id/menu_sort_low"
                android:title="@string/low_priority" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings"/>

</menu>